--- a/staff_webapp/pubspec.yaml
+++ b/staff_webapp/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   get_it: ^8.2.0
   equatable: ^2.0.7
   flutter_bloc: ^9.1.1
+  firebase_auth: ^6.1.0
 
 dev_dependencies:
   flutter_test:
